--- a/style.css
+++ b/style.css
@@ -115,6 +115,8 @@ body{
 /* ! NAV BAR */
 
 .navbar{
+    width: auto;
+    height: 55px;
     display: flex;
     justify-content: center;
     padding-top: 90px;
@@ -144,8 +146,8 @@ body{
 }
 
 .navbar li a:hover {
-    border-bottom: 3px solid black; 
-    transition: border-bottom 0.4s ease-out;
+    border-bottom: 2px solid #175ea8; 
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 /* ! DIV DESCONTO */
@@ -185,6 +187,8 @@ body{
 /* ! CARDS SERVICES */
 
 .container {
+    width: auto;
+    height: 100px;
     display: flex;
     justify-content: center;
     margin-top: 10px;
@@ -205,7 +209,7 @@ body{
     align-items: center;
     margin: 20px; 
     border-radius: 10px;
-    transition: border-bottom border-left 0.3s ease;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
     box-shadow:  9px 9px 18px #c1c1c1,
              -9px -9px 18px #ffffff;
              
@@ -225,6 +229,10 @@ body{
 }
 
 /* ! CAROUSEL */
+
+.flickity-button .flickity-prev-next-button {
+    background-color: rgba(255, 255, 255, 0.75);
+}
  
   .gallery-cell {
     width: 66%;
@@ -402,12 +410,12 @@ body{
     transform: translateY(-5px); 
 }
 
-.prev, .next {
+.proximo, .anterior {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
-    color: #fff;
+    background-color: rgba(240, 240, 240, 0.658);
+    color: #333;
     border: none;
     border-radius: 50%;
     width: 35px;
@@ -419,11 +427,11 @@ body{
     z-index: 10;
 }
 
-.prev {
+.anterior {
     left: 10px;
 }
 
-.next {
+.proximo {
     right: 10px;
 }
 
